<resources>
    <string name="app_name">CarRentalMVVM</string>
    <string name="submit">Submit</string>
    <string name="sign_in">SIGN IN</string>
    <string name="have_an_account_already">Have an account Already?</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="full_name">FULL NAME</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_yet">Don’t Have an account yet?</string>
    <string name="forgot_password">Forgot password?</string>

    // validate
    <string name="username_cannot_empty">Cannot be empty</string>
    <string name="username_letters_and_numbers">Can only contain letters and numbers</string>
    <string name="username_between_8_20_characters_long">Must be between 8–20 characters long</string>
    <string name="full_name_error">Only characters from a-z or A-Z are allowed</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="password_characters">Password contains invalid characters</string>
    <string name="password_between_8_20_characters_long">Password must be between 8–20 characters long</string>
    <string name="password_must_character">Password must contain at least one special character: @, #, &amp;, $, !</string>
    <string name="family_cars">family cars</string>
    <string name="cheap_cars">Cheap cars</string>
    <string name="luxuly_cars">Luxuly cars</string>
    <string name="cars_available_near_you">Cars Available Near You</string>
    <string name="view_more">View more</string>
    <string name="please_enter">Please enter your username and password</string>
    <string name="register_successful">Register successful</string>
    <string name="username_already">Username already exists</string>
    <string name="username_exist"> The username does not exist</string>
    <string name="password_wrong">Enter the wrong password</string>
    <string name="is_empty">Please fill in all fields</string>
    <string name="login_failed">Login failed</string>
    <string name="day">/day</string>
    <string name="all">All</string>
    <string name="car_type">Car Type</string>
    <string name="automatic">Automatic</string>
    <string name="seats">Seats</string>
    <string name="render">RENDER</string>
    <string name="book_now">BOOK NOW</string>
    <string name="select_date_and_location">Please select date and location before booking</string>
    <string name="select_location">Please select a location</string>
    <string name="select_start_end_date">Please select a start and end date</string>
    <string name="select_quantity">Please select quantity</string>
    <string name="end_date_after_start_day">The end date is after the start date, please select again</string>
    <string name="amount_is_invalid">Book car amount is invalid</string>
    <string name="start">Start</string>
    <string name="date">Date</string>
    <string name="end">End</string>
    <string name="needs_a_driver">Needs a driver</string>
    <string name="selected">Selected:</string>
    <string name="days">Days:</string>
    <string name="price">Price:</string>
    <string name="drivers_fee">Drivers Fee:</string>
    <string name="total">TOTAL</string>
    <string name="location">LOCATION</string>
    <string name="confirm">Confirm</string>
    <string name="selected_payment">Selected</string>
    <string name="rated">Rated:</string>
    <string name="thanks_payment">Well done Your payment is Successfuly done \nand your car is on its way.</string>
    <string name="payment_made">PAYMENT MADE</string>
    <string name="track">Track</string>
    <string name="go_back">Go Back</string>
    <string name="start_end_date_same">The start and end dates cannot be the same</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="help_info">Help &amp; Info</string>
    <string name="please_name_car">Please enter car name</string>
    <string name="trending">TRENDING</string>
    <string name="cars">Cars</string>
    <string name="search">Search</string>
    <string name="my_favorites">My Favorites</string>
    <string name="delete">Delete</string>
    <string name="car_tracking">Car Tracking</string>
    <string name="driver">Driver</string>
    <string name="remaining_minutes">Remaining Minutes</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>
    <string name="_15_sec">15 sec</string>
    <string name="_15_min">15 min</string>
    <string name="huy_v">HUY VÕ</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="or">OR</string>
    <string name="default_web_client_id">909729442915-dsj4o20us49ufo04jccnfu6pkd2tqu1g.apps.googleusercontent.com</string>
    <string name="my_booking">My Booking</string>
</resources>