<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.track_map.TrackMapActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/trackingMap"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icBackTrackMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_down_circle_fill"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/car_tracking"
            android:textAlignment="center"
            android:textColor="@color/dark_teal"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/driver"
            android:textColor="@color/dark_teal"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/remaining_minutes"
            android:textColor="@color/dark_teal"
            android:textSize="15sp" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginBottom="40dp"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">


        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icLocation"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_location_track"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/icDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_driver_track"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/huy_v"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@id/icDriver"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="30dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_phone_track"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@id/icDriver"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:layout_marginBottom="30dp"
        android:id="@+id/icCLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_clock_track"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/_15_min"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@id/icCLock"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/_15_sec"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@id/icCLock"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/btnCompleted"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:background="@drawable/bg_dark_teal_button"
        android:fontFamily="@font/inter_medium"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/completed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:background="@drawable/bg_dark_salmon_outside"
        android:fontFamily="@font/inter_medium"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/dark_teal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.497" />

</androidx.constraintlayout.widget.ConstraintLayout>